# corpo-ch

./: .gitignore  README.md  dotenv-example  json_schemas.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: corp-bot-deploy.yml  corp-bot-deploy.yml.save
CHOpt/: CHOpt
DiscordOauth2/: settings.py
SngCli/output/6ee26984-7fe8-4112-8eb2-d299a6619085/: song.ini
SngCli/output/c8783936-7e7e-474e-8b78-31e827e95a47/: notes.chart  preview.opus  song.opus
cogs/: ch.py  chcmds.py  ownercmds.py  qualifiercmds.py  testing.py  tourneycmds.py
corpoch/: __init__.py  admin.py  celery.py  models.py  providers.py  settings.py
corpoch/dbot/: README.md  __init__.py  bot.py  bot_tasks.py  tasks.py
corpoch/dbot/cogs/: chcmds.py  qualifiercmds.py  tourneycmds.py
corpoch/migrations/: 0017_alter_groupseed_player_alter_matchban_chart_and_more.py  0018_tournamentmatchongoing_ref.py  0019_alter_tournamentround_steg_data.py  0020_alter_gsheetapi_api_key.py  0021_alter_gsheetapi_options.py  0022_bracketgroup_discord_qualifiersubmission_screenshot_and_more.py  0023_alter_qualifiersubmission_screenshot_and_more.py  0024_alter_tournamentqualifier_end_time.py  0025_rename_qualifier_chart_tournamentqualifier_chart.py
corpoch/utils/steg/: ch_steg_reader
corpodbot/cogs/: ownercmds.py  tourneycmds.py
modules/: chutils.py  gsheets.py  proofcalls.py  sqlschema.py  tourneysql.py
